--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yash Kallewar</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Style link -->
     <link rel="stylesheet" href="./style/navBar.css" />
+    <link rel="stylesheet" href="./style/banner.css" />
+    <link rel="stylesheet" href="./style/about.css" />
   </head>
   <body>
     <header class="navBar">
@@ -28,13 +37,77 @@
             <a href="">Resume </a>
           </li>
           <li>
-            <a href=""> Contactc Us</a>
+            <a href=""> Contact Us</a>
           </li>
-          
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="banner">
+        <div class="row">
+          <div class="box box-1">
+            <div>
+              <h2>Hello i am <span>Yash kallewar</span></h2>
+              <p>
+                i am specilise in UI/UX Designing and <br />
+                Frontend Development
+              </p>
+              <div>
+                <button>
+                  <a href="#">Hire me</a>
+                </button>
+                <button>
+                  <a href="#">Contact Us</a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="box box-2">
+            <img src="./assets/1st.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="about">
+        <h2>About Us</h2>
+        <dic class="row">
+          <div class="img-holder">
+            <img src="./assets/yash profile img.png" alt="" />
+          </div>
+          <div class="details">
+            <h3>Skills</h3>
+            <div class="grid">
+              <div class="box">
+                <i class="fa-brands fa-html5 fa-fade"></i>
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-css3-alt fa-fade"></i>
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-square-js fa-fade"></i>
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-bootstrap fa-fade"></i>
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-react fa-fade"></i>
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-node fa-fade"></i>
+              </div>
+              <div class="box">
+                <img src="./assets/mongo db.png" alt="" class="fa-fade"  width="150px" />
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-figma fa-fade"></i>
+              </div>
+              <div class="box">
+                <i class="fa-brands fa-canadian-maple-leaf fa-fade"></i>
+              </div>
+            </div>
+          </div>
+        </dic>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
