project and experience section is pending

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./style/navBar.css" />
     <link rel="stylesheet" href="./style/banner.css" />
     <link rel="stylesheet" href="./style/about.css" />
+    <link rel="stylesheet" href="./style/projects.css" />
   </head>
   <body>
     <header class="navBar">
@@ -47,10 +48,15 @@
         <div class="row">
           <div class="box box-1">
             <div>
-              <h2>Hello i am <span>Yash kallewar</span></h2>
+              <h2>
+                Hello i'm <span> Yash kallewar </span>
+              </h2>
               <p>
-                i am specilise in UI/UX Designing and <br />
-                Frontend Development
+                i am specialize in
+                <b style="color: #6bdcff">UI/UX</b> Designing and <br />
+                <b style="color: rgb(255, 0, 89)">
+                  &#60; Frontend Development / &#62;</b
+                >
               </p>
               <div>
                 <button>
@@ -69,7 +75,7 @@
       </section>
       <section class="about">
         <h2>About Us</h2>
-        <dic class="row">
+        <div class="row">
           <div class="img-holder">
             <img src="./assets/yash profile img.png" alt="" />
           </div>
@@ -78,36 +84,83 @@
             <div class="grid">
               <div class="box">
                 <i class="fa-brands fa-html5 fa-fade"></i>
+                <span>HTML5</span>
               </div>
               <div class="box">
                 <i class="fa-brands fa-css3-alt fa-fade"></i>
+                <span>CSS3</span>
               </div>
               <div class="box">
                 <i class="fa-brands fa-square-js fa-fade"></i>
+                <span>javaScript</span>
               </div>
               <div class="box">
                 <i class="fa-brands fa-bootstrap fa-fade"></i>
+                <span>Bootstrap5</span>
               </div>
               <div class="box">
                 <i class="fa-brands fa-react fa-fade"></i>
+                <span>Reactjs</span>
               </div>
               <div class="box">
                 <i class="fa-brands fa-node fa-fade"></i>
+                <span>Nodejs</span>
               </div>
               <div class="box">
-                <img src="./assets/mongo db.png" alt="" class="fa-fade"  width="150px" />
+                <img
+                  src="./assets/mongo db.png"
+                  alt=""
+                  class="fa-fade"
+                  width="150px"
+                />
               </div>
               <div class="box">
                 <i class="fa-brands fa-figma fa-fade"></i>
+                <span>Figma</span>
               </div>
               <div class="box">
                 <i class="fa-brands fa-canadian-maple-leaf fa-fade"></i>
+                Canva
               </div>
             </div>
           </div>
-        </dic>
+        </div>
+        <div class="experience"></div>
+      </section>
+      <section class="projects">
+        <h2>My Projects</h2>
+        <div class="grid">
+          <div class="box">
+            <h1>project Name</h1>
+          </div>
+          <div class="box">
+            <h1>project Name</h1>
+          </div>
+          <div class="box">
+            <h1>project Name</h1>
+          </div>
+          <div class="box">
+            <h1>project Name</h1>
+          </div>
+          <div class="box">
+            <h1>project Name</h1>
+          </div>
+          <div class="box">
+            <h1>project Name</h1>
+          </div>
+        </div>
+      </section>
+      <section class="contact-us">
+        <h2>Contact Us</h2>
+        <div class="infoHolder">
+          <div></div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+
+      <p>All Copyrites Reserved by yash kallewar</p>
+      
+    </footer>
   </body>
 </html>
