navbar is fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header class="navBar">
       <nav>
-        <h1>Yash kallewar</h1>
+        <span>Yash kallewar</span>
         <ul>
           <li>
             <a href=""> Home</a>
