--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yash Kallewar</title>
+    <title>Yash Kallewar - Frontend Developer</title>
+    <!-- bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <!-- font awsome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -11,156 +24,185 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- Style link -->
-    <link rel="stylesheet" href="./style/navBar.css" />
-    <link rel="stylesheet" href="./style/banner.css" />
-    <link rel="stylesheet" href="./style/about.css" />
-    <link rel="stylesheet" href="./style/projects.css" />
+    <!-- my style -->
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <header class="navBar">
-      <nav>
-        <span>Yash kallewar</span>
-        <ul>
-          <li>
-            <a href=""> Home</a>
-          </li>
-          <li>
-            <a href="">About </a>
-          </li>
-          <li>
-            <a href="">Skill </a>
-          </li>
-          <li>
-            <a href="">Projects </a>
-          </li>
-          <li>
-            <a href="">Resume </a>
-          </li>
-          <li>
-            <a href=""> Contact Us</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="banner">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">Yash kallewar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarSupportedContent"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0 fs-5">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <button class="btn btn-danger p-0 px-2">
+                <a class="nav-link" href="#ContactUs">Get in Touch</a>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main class="container">
+      <section class="heroBanner">
         <div class="row">
-          <div class="box box-1">
-            <div>
-              <h2>
-                Hello i'm <span> Yash kallewar </span>
-              </h2>
-              <p>
-                i am specialize in
-                <b style="color: #6bdcff">UI/UX</b> Designing and <br />
-                <b style="color: rgb(255, 0, 89)">
-                  &#60; Frontend Development / &#62;</b
-                >
-              </p>
+          <div class="col-md-6 py-5">
+            <div
+              class="d-flex flex-column justify-content-center py-5 my-5 gap-3"
+            >
+              <h1 class="text-danger">hii, i'm yash kallewar</h1>
+              <h3 class="text-warning">Frontend Developer</h3>
               <div>
-                <button>
-                  <a href="#">Hire me</a>
-                </button>
-                <button>
-                  <a href="#">Contact Us</a>
-                </button>
+                <a href="" class="btn text-white btn-danger me-4"
+                  >Download CV</a
+                >
               </div>
             </div>
           </div>
-          <div class="box box-2">
+          <div class="col-md-6">
             <img src="./assets/1st.png" alt="" />
           </div>
         </div>
       </section>
-      <section class="about">
-        <h2>About Us</h2>
+      <section class="aboutUs my-3">
         <div class="row">
-          <div class="img-holder">
-            <img src="./assets/yash profile img.png" alt="" />
+          <div class="col-md-6 py-5">
+            <h2 class="mb-5">About Us</h2>
+            <p>
+              I am a dedicated Computer Science graduate with a Bachelor's
+              degree, currently pursuing a Master's degree at Gondwana
+              University. I have recently completed a Full Stack Web Development
+              course at Alpha Academy through NASSCOM. Throughout my training, I
+              have worked on several live projects, including Project1,
+              Project2, and Project3. I am now seeking an opportunity to start
+              my career with a dynamic organization where I can contribute my
+              skills and grow professionally.
+            </p>
           </div>
-          <div class="details">
-            <h3>Skills</h3>
-            <div class="grid">
-              <div class="box">
-                <i class="fa-brands fa-html5 fa-fade"></i>
-                <span>HTML5</span>
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-css3-alt fa-fade"></i>
-                <span>CSS3</span>
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-square-js fa-fade"></i>
-                <span>javaScript</span>
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-bootstrap fa-fade"></i>
-                <span>Bootstrap5</span>
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-react fa-fade"></i>
-                <span>Reactjs</span>
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-node fa-fade"></i>
-                <span>Nodejs</span>
-              </div>
-              <div class="box">
-                <img
-                  src="./assets/mongo db.png"
-                  alt=""
-                  class="fa-fade"
-                  width="150px"
-                />
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-figma fa-fade"></i>
-                <span>Figma</span>
-              </div>
-              <div class="box">
-                <i class="fa-brands fa-canadian-maple-leaf fa-fade"></i>
-                Canva
-              </div>
+          <div class="col-md-6">
+            <div class="d-flex justify-content-center align-items-center">
+              <img src="./assets/yash profile img.png" alt="" width="250px" />
             </div>
           </div>
         </div>
-        <div class="experience"></div>
       </section>
-      <section class="projects">
-        <h2>My Projects</h2>
-        <div class="grid">
-          <div class="box">
-            <h1>project Name</h1>
-          </div>
-          <div class="box">
-            <h1>project Name</h1>
-          </div>
-          <div class="box">
-            <h1>project Name</h1>
-          </div>
-          <div class="box">
-            <h1>project Name</h1>
-          </div>
-          <div class="box">
-            <h1>project Name</h1>
-          </div>
-          <div class="box">
-            <h1>project Name</h1>
-          </div>
-        </div>
+      <section class="skills my-4 py-5 bg-danger rounded-3">
+        <h2 class="text-center">Skills</h2>
+        <marquee behavior="" direction="" class="display-3">
+          <i class="fa-brands fa-html5 fa-fade mx-2"></i>
+          <i class="fa-brands fa-css3-alt fa-fade mx-2"></i>
+          <i class="fa-brands fa-square-js fa-fade mx-2"></i>
+          <i class="fa-brands fa-react fa-spin mx-2"></i>
+          <i class="fa-brands fa-bootstrap fa-fade mx-2"></i>
+          <i class="fa-brands fa-wordpress fa-fade mx-2"></i>
+          <i class="fa-brands fa-wix fa-fade mx-2"></i>
+          <i class="fa-brands fa-figma fa-fade mx-2"></i>
+        </marquee>
       </section>
-      <section class="contact-us">
-        <h2>Contact Us</h2>
-        <div class="infoHolder">
-          <div></div>
+      <section class="projects"></section>
+      <section class="contactUs my-3 bg-danger rounded py-5" id="ContactUs">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="bg-light text-dark w-75 h-100 py-3 rounded-end-5">
+              <h2 class="text-center my-3">Contact Us</h2>
+              <ul>
+                <li class="text-dark list-unstyled">
+                  <i class="fa-solid fa-phone text-dark me-2"></i>
+                  Mobile no. :<a
+                    href="tel:+91 9168745141"
+                    class="text-decoration-none text-dark"
+                    >9168745141</a
+                  >
+                </li>
+                <li class="text-dark list-unstyled">
+                  <i class="fa-solid fa-envelope text-dark me-2"></i>
+                  Email id :
+                  <a
+                    href="mailto:yashkallewar12@gmail.com"
+                    class="text-decoration-none text-dark"
+                    >yashkallewar12@gmail.com</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 text-light">
+            <div class="form">
+              <form action="">
+                <input
+                  type="text"
+                  name="FullName"
+                  id=""
+                  class="text-light my-2 w-75 bg-transparent rounded p-1"
+                  placeholder="Full Name "
+                />
+                <br />
+                <input
+                  type="text"
+                  name="MobileN0"
+                  id=""
+                  class="text-light my-2 w-75 bg-transparent rounded p-1"
+                  placeholder="Mobile No."
+                />
+                <br />
+                <input
+                  type="text"
+                  name="Emailid"
+                  id=""
+                  class="text-light my-2 w-75 bg-transparent rounded p-1"
+                  placeholder="Emain id"
+                />
+                <br />
+                <input
+                  type="submit"
+                  value="Submit"
+                  class="text-light my-2 w-75 bg-transparent rounded py-1"
+                />
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-    <footer>
-
-      <p>All Copyrites Reserved by yash kallewar</p>
-      
+    <footer class="bg-danger py-2">
+      <div class="container px-5">
+        <h3 class="text-center">Yash Kallewar</h3>
+        <div class="px-5 fs-1 text-center">
+          <i class="fa-brands fa-instagram mx-4"></i>
+          <i class="fa-brands fa-linkedin mx-4"></i>
+          <i class="fa-brands fa-whatsapp mx-4"></i>
+          <i class="fa-brands fa-github mx-4"></i>
+        </div>
+        <hr />
+        <p class="text-center p-0 m-0">
+          All Copyrights &copy; 2024 are Reserve by Yash kallewr
+        </p>
+      </div>
     </footer>
   </body>
 </html>
