some changes is done

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="./assets/1st.png" alt="" />
+            <img src="./assets/1st.png" alt="" class="img-fluid"/>
           </div>
         </div>
       </section>
       <section class="aboutUs my-3">
         <div class="row">
           <div class="col-md-6 py-5">
-            <h2 class="mb-5">About Us</h2>
+            <h2 class="mb-5">About Me</h2>
             <p>
               I am a dedicated Computer Science graduate with a Bachelor's
               degree, currently pursuing a Master's degree at Gondwana
@@ -106,13 +106,13 @@
           </div>
           <div class="col-md-6">
             <div class="d-flex justify-content-center align-items-center">
-              <img src="./assets/yash profile img.png" alt="" width="250px" />
+              <img src="./assets/yash profile img.png" alt="" width="250px" class="img-fluid" />
             </div>
           </div>
         </div>
       </section>
       <section class="skills my-4 py-5 bg-danger rounded-3">
-        <h2 class="text-center">Skills</h2>
+        <h2 class="text-center">My Skills</h2>
         <marquee behavior="" direction="" class="display-3">
           <i class="fa-brands fa-html5 fa-fade mx-2"></i>
           <i class="fa-brands fa-css3-alt fa-fade mx-2"></i>
@@ -133,7 +133,7 @@
               <ul>
                 <li class="text-dark list-unstyled">
                   <i class="fa-solid fa-phone text-dark me-2"></i>
-                  Mobile no. :<a
+                  <a
                     href="tel:+91 9168745141"
                     class="text-decoration-none text-dark"
                     >9168745141</a
@@ -141,7 +141,7 @@
                 </li>
                 <li class="text-dark list-unstyled">
                   <i class="fa-solid fa-envelope text-dark me-2"></i>
-                  Email id :
+                  
                   <a
                     href="mailto:yashkallewar12@gmail.com"
                     class="text-decoration-none text-dark"
@@ -151,14 +151,14 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6 text-light">
+          <div class="col-md-6 text-light d-flex justify-content-center align-items-center">
             <div class="form">
               <form action="">
                 <input
                   type="text"
                   name="FullName"
                   id=""
-                  class="text-light my-2 w-75 bg-transparent rounded p-1"
+                  class="text-light my-2 w-100 bg-transparent rounded p-1"
                   placeholder="Full Name "
                 />
                 <br />
@@ -166,7 +166,7 @@
                   type="text"
                   name="MobileN0"
                   id=""
-                  class="text-light my-2 w-75 bg-transparent rounded p-1"
+                  class="text-light my-2 w-100 bg-transparent rounded p-1"
                   placeholder="Mobile No."
                 />
                 <br />
@@ -174,14 +174,14 @@
                   type="text"
                   name="Emailid"
                   id=""
-                  class="text-light my-2 w-75 bg-transparent rounded p-1"
+                  class="text-light my-2 w-100 bg-transparent rounded p-1"
                   placeholder="Emain id"
                 />
                 <br />
                 <input
                   type="submit"
                   value="Submit"
-                  class="text-light my-2 w-75 bg-transparent rounded py-1"
+                  class="text-light my-2 w-100 bg-transparent rounded py-1"
                 />
               </form>
             </div>
@@ -200,7 +200,7 @@
         </div>
         <hr />
         <p class="text-center p-0 m-0">
-          All Copyrights &copy; 2024 are Reserve by Yash kallewr
+          All Copyrights &copy; 2024 are Reserve by Yash kallewar
         </p>
       </div>
     </footer>
