--- a/index.html
+++ b/index.html
@@ -128,7 +128,35 @@
           <i class="fa-brands fa-figma fa-fade mx-2"></i>
         </marquee>
       </section>
-      <section class="certificates"></section>
+      <section class="certificates">
+        <h2>My Achievements</h2>
+        <div class="grid">
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
+            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </section>
       <section class="projects">
         <h2 class="my-3">Projects</h2>
         <div class="grid">
@@ -230,7 +258,7 @@
             </div>
           </div>
         </div>
-        <hr class="mx-5">
+        <hr class="mx-5" />
         <p class="text-center p-0 m-0">
           All Copyrights&copy; 2024 are Reserve by Yash kallewar
         </p>
