--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="https://fonts.googleapis.com/css?family=Urbanist:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Urbanist:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic"
+      rel="stylesheet"
+    />
     <!-- my style -->
     <link rel="stylesheet" href="./style/style.css" />
   </head>
@@ -92,6 +95,10 @@
         <div class="row">
           <div class="col-md-6">
             <div class="d-flex justify-content-center align-items-center">
+              <div class="boxes">
+                <div class="box1 box"></div>
+                <div class="box2 box"></div>
+              </div>
               <img
                 src="./assets/yash profile img.png"
                 alt=""
@@ -136,16 +143,16 @@
             <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
-            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+            <img src="./assets/yash (1).jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
-            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+            <img src="./assets/yash (2).jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
-            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+            <img src="./assets/yash (3).jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
-            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+            <img src="./assets/yash (4).jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
             <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
@@ -163,116 +170,142 @@
         <div class="grid">
           <div class="box">
             <div class="img-holder">
-              <img src="/assets/AlphaAcademy.png" width="100%">
+              <img src="/assets/AlphaAcademy.png" width="100%" />
             </div>
             <div class="info-holder"></div>
           </div>
           <div class="box">
             <div class="img-holder">
-              <img src="/assets/CoffeeShop.png" width="100%">
+              <img src="/assets/CoffeeShop.png" width="100%" />
             </div>
             <div class="info-holder"></div>
           </div>
           <div class="box">
             <div class="img-holder">
-              <img src="/assets/Netflix.png" width="100%">
+              <img src="/assets/Netflix.png" width="100%" />
             </div>
             <div class="info-holder"></div>
           </div>
           <div class="box">
             <div class="img-holder">
-              <img src="/" alt="">
+              <img src="/" alt="" />
             </div>
             <div class="info-holder"></div>
           </div>
         </div>
       </section>
-      <footer class="contactUs my-3 bg-danger rounded pt-5 pb-3" id="ContactUs">
-        <div class="row">
-          <div class="col-md-6">
-            <div
-              class="bg-light text-dark w-75 h-100 py-3 rounded-end-5 contactUs-holder"
-            >
-              <h2 class="text-center my-3">Contact Us</h2>
-              <ul>
-                <li class="text-dark list-unstyled">
-                  <i class="fa-solid fa-phone text-dark me-2"></i>
-                  <a
-                    href="tel:+91 9168745141"
-                    class="text-decoration-none text-dark"
-                    >9168745141</a
-                  >
-                </li>
-                <li class="text-dark list-unstyled">
-                  <i class="fa-solid fa-envelope text-dark me-2"></i>
-
-                  <a
-                    href="mailto:yashkallewar12@gmail.com"
-                    class="text-decoration-none text-dark"
-                    >yashkallewar12@gmail.com</a
-                  >
-                </li>
-              </ul>
-              <div class="d-flex gap-5 ms-5">
-                <a href="">
-                  <i class="fa-brands fa-instagram text-dark fs-3"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-linkedin text-dark fs-3"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-whatsapp text-dark fs-3"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-github text-dark fs-3"></i>
-                </a>
-              </div>
+      <section class="services">
+        <h2 class="my-3">Service</h2>
+        <div class="grid">
+          <div class="box">
+            <div class="circle">
+              <img src="./assets/ui-ux.png" alt="" class="img-fluid mb-5" width="100px">
             </div>
+            <h3 class="fs-2">UI/UX</h3>
+            <p>lorem ipsom passage</p>
           </div>
+          <div class="box">
+            <div class="circle">
+              <img src="./assets/web design.png" alt="" class="img-fluid mb-2" width="90px" style="filter: invert();">
+            </div>
+            <h3 class="fs-2">Web Design</h3>
+            <p>lorem ipsom passage</p>
+          </div>
+          <div class="box">
+            <div class="circle">
+              <img src="./assets/web application.png " alt="" class="img-fluid my-1" width="100px" style="filter: invert();">
+            </div>
+            <h3 class="fs-2">Web Application</h3>
+            <p>lorem ipsom passage</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="contactUs my-3 bg-danger rounded pt-5 pb-3" id="ContactUs">
+      <div class="row">
+        <div class="col-md-6">
           <div
-            class="col-md-6 text-light d-flex justify-content-center align-items-center mt-3"
+            class="bg-light text-dark w-75 h-100 py-3 rounded-end-5 contactUs-holder"
           >
-            <div class="form">
-              <form action="">
-                <input
-                  type="text"
-                  name="FullName"
-                  id=""
-                  class="text-light my-2 bg-transparent rounded p-1"
-                  placeholder="Full Name "
-                />
-                <br />
-                <input
-                  type="text"
-                  name="MobileN0"
-                  id=""
-                  class="text-light my-2 bg-transparent rounded p-1"
-                  placeholder="Mobile No."
-                />
-                <br />
-                <input
-                  type="text"
-                  name="Emailid"
-                  id=""
-                  class="text-light my-2 bg-transparent rounded p-1"
-                  placeholder="Email id"
-                />
-                <br />
-                <input
-                  type="submit"
-                  value="Submit"
-                  class="text-light my-2 fw-bold fs-5 bg-transparent rounded py-1"
-                />
-              </form>
+            <h2 class="text-center my-3">Contact Us</h2>
+            <ul>
+              <li class="text-dark list-unstyled">
+                <i class="fa-solid fa-phone text-dark me-2"></i>
+                <a
+                  href="tel:+91 9168745141"
+                  class="text-decoration-none text-dark"
+                  >9168745141</a
+                >
+              </li>
+              <li class="text-dark list-unstyled">
+                <i class="fa-solid fa-envelope text-dark me-2"></i>
+
+                <a
+                  href="mailto:yashkallewar12@gmail.com"
+                  class="text-decoration-none text-dark"
+                  >yashkallewar12@gmail.com</a
+                >
+              </li>
+            </ul>
+            <div class="d-flex gap-5 ms-5">
+              <a href="">
+                <i class="fa-brands fa-instagram text-dark fs-3"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-linkedin text-dark fs-3"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-whatsapp text-dark fs-3"></i>
+              </a>
+              <a href="">
+                <i class="fa-brands fa-github text-dark fs-3"></i>
+              </a>
             </div>
           </div>
         </div>
-        <hr class="mx-5" />
-        <p class="text-center p-0 m-0">
-          All Copyrights&copy; 2024 are Reserve by Yash Kallewar
-        </p>
-      </footer>
-    </main>
+        <div
+          class="col-md-6 text-light d-flex justify-content-center align-items-center mt-3"
+        >
+          <div class="form">
+            <form action="">
+              <input
+                type="text"
+                name="FullName"
+                id=""
+                class="text-light my-2 bg-transparent rounded p-1"
+                placeholder="Full Name "
+              />
+              <br />
+              <input
+                type="text"
+                name="MobileN0"
+                id=""
+                class="text-light my-2 bg-transparent rounded p-1"
+                placeholder="Mobile No."
+              />
+              <br />
+              <input
+                type="text"
+                name="Emailid"
+                id=""
+                class="text-light my-2 bg-transparent rounded p-1"
+                placeholder="Email id"
+              />
+              <br />
+              <input
+                type="submit"
+                value="Submit"
+                class="text-light my-2 fw-bold fs-5 bg-transparent rounded py-1"
+              />
+            </form>
+          </div>
+        </div>
+      </div>
+      <hr class="mx-5" />
+      <p class="text-center p-0 m-0">
+        All Copyrights&copy; 2024 are Reserve by Yash Kallewar
+      </p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
