--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand fw-lighter fs-1 text-light" href="#"
           >Yash Kallewar</a
@@ -97,7 +97,7 @@
             <div class="d-flex justify-content-center align-items-center">
               <div class="boxes">
                 <div class="box1 box"></div>
-                <div class="box2 box"></div>
+                <!-- <div class="box2 box"></div> -->
               </div>
               <img
                 src="./assets/yash profile img.png"
