--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
+            <img src="./assets/Yash Kallewar participate certificate_page-0001.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="box">
             <img src="./assets/yash (1).jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
@@ -155,10 +158,7 @@
             <img src="./assets/yash (4).jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
-            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
-          </div>
-          <div class="box">
-            <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
+            <img src="./assets/Yash Kallewar internship.jpg" alt="" class="img-fluid" />
           </div>
           <div class="box">
             <img src="./assets/yash fswd.jpg" alt="" class="img-fluid" />
@@ -169,27 +169,27 @@
         <h2 class="my-3">Projects</h2>
         <div class="grid">
           <div class="box">
-            <div class="img-holder">
+            <a href="" class="text-decoration-none img-holder">
               <img src="/assets/AlphaAcademy.png" width="100%" />
-            </div>
+            </a>
             <div class="info-holder"></div>
           </div>
           <div class="box">
-            <div class="img-holder">
+            <a href="" class="text-decoration-none img-holder">
               <img src="/assets/CoffeeShop.png" width="100%" />
-            </div>
+            </a>
             <div class="info-holder"></div>
           </div>
           <div class="box">
-            <div class="img-holder">
+            <a href="" class="text-decoration-none img-holder">
               <img src="/assets/Netflix.png" width="100%" />
-            </div>
+            </a>
             <div class="info-holder"></div>
           </div>
           <div class="box">
-            <div class="img-holder">
+            <a href="" class="text-decoration-none img-holder">
               <img src="/" alt="" />
-            </div>
+            </a>
             <div class="info-holder"></div>
           </div>
         </div>
